# circuithack

./: .gitignore  AGENTS.md  README.md  pyproject.toml  wokwi.toml
.github/: copilot-instructions.md
docs/: byteboi-rev2-kid-game-handbook.md  byteboi-rev2-trading-board-card-handbook.md  kid-friendly-strategy-rom-tier-list.md  llm-design-principles.md  micropython-games-advanced-pure-launchers.md  micropython-games-portable-deep-list.md  micropython-games-porting-catalog.md  micropython-games-pure-easy-port.md  retro-go-bit2-porting-guide.md  space-trader-implementation.md  tower-defense-implementation.md
examples/: hello.py
ports/: __init__.py
ports/codee/: README.md  __init__.py  codee_audio.py  codee_display.py  codee_input.py  codee_save.py  game_chess.py  game_launcher.py  game_tinycity.py
ports/codee/wokwi/: README.md  diagram.json  main.py  wokwi.toml
scripts/: spacetrader_preview.py  sync_game_sources.py
src/circuithack/: backup.py  cli.py  codee.py  device.py  env.py  firmware.py  flash.py  gamesync.py  gamewatch.py  mcp_server.py  micropython.py  nvsdecode.py  rompatch.py  runner.py  util.py  wokwi.py
tests/: test_backup.py  test_chess.py  test_codee.py  test_device.py  test_env.py  test_firmware.py  test_flash.py  test_game2048.py  test_gamesync.py  test_gamewatch.py  test_launcher.py  test_nvsdecode.py  test_rompatch.py  test_tinycity.py
third_party_games/: sources.lock.json
wokwi/basic-game/: README.md  diagram.json  main.py
wokwi/codee-sim/: README.md  diagram.json  main.py  wokwi.toml
wokwi/part2/: diagram.json  wokwi.toml
(+6 files in other folders)
